feat(thirdparty): support public OAuth2 clients
